# django-editor-ymaps

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  REQUIREMENTS.md  index.html  mkdocs.yml  pyproject.toml  remove_pycache.py  setup.py
.github/workflows/: test.yml
app/: manage.py
app/app/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
app/djeym/: __init__.py  admin.py  apps.py  decorators.py  forms.py  globals.py  middleware.py  mixins.py  models.py  raw_presets.py  signals_func.py  tests.py  urls.py  utils.py  views.py  widgets.py
app/djeym/management/commands/: __init__.py  addmarker.py  exporticons.py
app/djeym/migrations/: 0001_initial.py  0002_tilesource_apikey_is_required.py
app/djeym/static/colorful/: colorPicker.css  jQuery.colorPicker.js
app/djeym/templates/djeym/: ymaps_editor.html
app/djeym/templatetags/: __init__.py  djeymtags.py
app/locale/ru/LC_MESSAGES/: django.po
assets/: README.md  Usage.txt  Yandex_Maps_API.txt  ymap.html
django_editor_yandex_maps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_editor_ymaps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
djeym/: __init__.py  admin.py  apps.py  decorators.py  forms.py  globals.py  middlewares.py  mixins.py  models.py  raw_presets.py  signals_func.py  tests.py  urls.py  utils.py  views.py  widgets.py
djeym/fixtures/: presets.json
djeym/locale/ru/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
djeym/management/commands/: addmarker.py  exporticons.py
djeym/migrations/: 0001_initial.py  0002_auto_20190321_0953.py  0002_mapcontrols_maptype.py  0002_status_alter_generalsettings_buttons_text_color_and_more.py  0003_alter_map_title.py  0003_map_disable_indicator_animation.py  0004_auto_20190330_1458.py  0005_auto_20190920_1345.py
djeym/static/djeym/css/: djeym_admin.css  djeym_admin.min.css  ymeditor.css  ymeditor.min.css  ymfront.css  ymfront.min.css
djeym/static/djeym/js/: admin_block_ip.min.js  admin_center_map_widget.js  admin_center_map_widget.min.js  admin_check_icon_offset_widget.js  admin_check_icon_offset_widget.min.js  admin_color_picker_widget.js  admin_color_picker_widget.min.js  admin_icon_collection.min.js  admin_view_icons.js  admin_view_icons.min.js  ckeditor_resize_image.js  ckeditor_resize_image.min.js  geocoder.js  geocoder.min.js  get_icon_name.js  get_icon_name.min.js  import_export.js  import_export.min.js  jquery-regex.js  jquery-regex.min.js  js.cookie.js  js.cookie.min.js  map_header.js  utils.js  ymeditor.js  ymeditor.min.js  ymfront.js  ymfront.min.js
djeym/templates/djeym/: ymaps_editor.html  ymeditor.html
djeym/templates/djeym/admin/: center_map_change_form.html  check_icon_offset_change_form.html  ckeditor_change_form.html  icon_collection_change_list.html  tile_source_change_list.html
djeym/templates/djeym/includes/: api_and_plugins.html  api_ymaps.html  coordinates_saver.html  distance.html  geocoder.html  loadymap.html  map_header.html  panel.html  presets.html  ymaps_front.html
djeym/templatetags/: djeymfilters.py  djeymtags.py
djeym/tests/: test_by_ants.py  tests.py
docs/: README.md  index.html  index.md
docs/overrides/: main.html
docs/pages/: deym.md  djeym.md  installation.md  usage.md
docs/stylesheets/: extra.css
docs/stylesheets/themes/: github_black.css  github_deep_purple.css  github_green.css  github_indigo.css  github_light_green.css  github_orange.css  github_pink.css  github_red.css  github_teal.css  github_yellow.css
nodymaps/: .gitignore  LICENSE  README.md
nodymaps/editor/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  jsconfig.json  package-lock.json  package.json
nodymaps/editor/public/: index.html
nodymaps/editor/src/: App.vue  helpers.js  i18n.js  main.js  store.js
nodymaps/editor/src/components/: CKEditor.vue  CategoryFilters.vue  ContextmenuHeatPoint.vue  ContextmenuPlacemark.vue  ContextmenuRoute.vue  ContextmenuTerritory.vue  DialogCreate.vue  GeneralSettings.vue  Heatmap.vue  Help.vue  IconCollection.vue  ImageCrop.vue  LoadIndicators.vue  MapControls.vue  Modals.vue  Presets.vue  SelectingCategories.vue  TileSources.vue
nodymaps/editor/src/locales/: i18n.js
nodymaps/editor/src/modules/: category_filters.js  contextmenu_territory.js  dialog_create.js  general_settings.js  heatmap.js  help.js  load_indicators.js  map_controls.js  modals.js  presets.js  selecting_categories.js  tile_sources.js  ymap.js  сontextmenu_heat_point.js  сontextmenu_placemark.js  сontextmenu_route.js
nodymaps/editor/src/plugins/: vuetify.js
nodymaps/front/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  README.md  package-lock.json  package.json  restyle.js  vue.config.js
nodymaps/front/public/: index.html
nodymaps/front/src/: App.vue  i18n.js  main.js
nodymaps/front/src/plugins/: vuetify.js
nodymaps/test_restyle/: .eslintignore  .eslintrc.json  index.js  jsconfig.json  package-lock.json  package.json
nodymaps/test_restyle/test/: test.js
screenshots/first_logo/: logo.xcf
src/django_editor_ymaps/: __init__.py  manage.py
src/django_editor_ymaps/ymaps/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_stub.py
tile/: Tile_Sources.json
yandex_maps/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py  widgets.py
yandex_maps/locale/ru/LC_MESSAGES/: django.mo  django.po
yandex_maps/migrations/: 0001_initial.py
yandex_maps/static/admin/js/: change_form.js
yandex_maps/static/yandex_maps/css/: ymap_admin.css  ymap_editor.css  ymap_front.css
yandex_maps/static/yandex_maps/jquery_ui/: jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css
yandex_maps/static/yandex_maps/js/: admin_center_map_widget.js  admin_color_picker_widget.js  ymap_editor_load.js  ymap_front_load.js
yandex_maps/static/yandex_maps/tiny_mce/: init_tinymce.js
yandex_maps/templates/yandex_maps/: ymap_editor.html
yandex_maps/templates/yandex_maps/admin/: change_form.html
yandex_maps/templatetags/: ymaptags.py
(+269 files in other folders)
